fix annotation alignment issues

--- a/projects/media-viewer/src/assets/sass/annotation-set.scss
+++ b/projects/media-viewer/src/assets/sass/annotation-set.scss
@@ -53,7 +53,7 @@ mv-metadata-layer, mv-redactions, mv-bookmark-icons {
     &__page {
       border: 9px solid transparent; // fix for text-highlight mispositioned
       background-color: transparent;
-      margin: 0 auto 8px auto;
+      margin: 1px auto -8px auto;
       position: relative;
     }
 
